--- a/App/Vue App/EleVuetor/src/components/styles/styles-levelPanel.css
+++ b/App/Vue App/EleVuetor/src/components/styles/styles-levelPanel.css
@@ -1,3 +1,8 @@
 .levelPanel{
-   
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
 }
