--- a/App/Vue App/EleVuetor/src/components/styles/styles-cabins.css
+++ b/App/Vue App/EleVuetor/src/components/styles/styles-cabins.css
@@ -5,3 +5,17 @@
     background-color: red;
 
 }
+
+.cab.resting{
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%,
+  100%{
+      opacity: 1;
+  }
+  50%{
+      opacity: 0.1;
+  }
+}
