--- a/App/Vue App/EleVuetor/src/components/styles/styles-cabins.css
+++ b/App/Vue App/EleVuetor/src/components/styles/styles-cabins.css
@@ -2,12 +2,20 @@
 .cab{
   height: 20%;
     width: 100px;
-    background-color: red;
-
+    /* background-color: red; */
+    transition: transform 1s linear 0s;
+   background-image:url('../src/assets/AgassizLogo.png'),
+   linear-gradient(98.3deg, rgb(0, 0, 0) 10.6%, rgb(255, 0, 0) 97.7%);
+background-size: 100%;
+background-repeat: no-repeat;
+background-position-y: 99%;
+background-position-x: 50%;
+border-radius: 4px;
 }
 
+
 .cab.resting{
-  animation: blink 1s infinite;
+  animation: blink 1s linear infinite;
 }
 
 @keyframes blink {
